New version v1.0.2 - SKU
